// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset Basic renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r0:-hint"
    class="css-1ceugzq-FieldsetContainer"
    id="fieldset-:r0:"
  >
    <legend
      class="css-tphc6l-boxStyles-Text"
    >
      What is your name?
    </legend>
    <span
      class="css-1nbe6b8-boxStyles-Text-FieldsetHint"
      id="fieldset-:r0:-hint"
    >
      We will only use this to respond to your requests
    </span>
    <div
      class="css-1dnalsd-FieldsetContent"
    >
      <div
        class="css-rg1iy2-boxStyles"
      >
        <div
          class="css-1uvazka-boxStyles-FieldContainer"
        >
          <label
            class="css-1l5cwjh-boxStyles"
            for="field-:r1:"
          >
            <span
              class="css-1gsq1zi-boxStyles-Text"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:r1:"
            type="text"
          />
        </div>
        <div
          class="css-1uvazka-boxStyles-FieldContainer"
        >
          <label
            class="css-1l5cwjh-boxStyles"
            for="field-:r2:"
          >
            <span
              class="css-1gsq1zi-boxStyles-Text"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:r2:"
            type="text"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset Legend as page heading renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r9:-hint"
    class="css-1ceugzq-FieldsetContainer"
    id="fieldset-:r9:"
  >
    <legend>
      <h1
        class="css-veetfv-boxStyles"
      >
        What is your name?
      </h1>
    </legend>
    <div
      class="css-uw4i6o-FieldsetHint"
      id="fieldset-:r9:-hint"
    >
      <span
        class="css-1c92izj-boxStyles-Text"
      >
        We will only use this to respond to your requests
      </span>
    </div>
    <div
      class="css-1dnalsd-FieldsetContent"
    >
      <div
        class="css-rg1iy2-boxStyles"
      >
        <div
          class="css-1uvazka-boxStyles-FieldContainer"
        >
          <label
            class="css-1l5cwjh-boxStyles"
            for="field-:ra:"
          >
            <span
              class="css-1gsq1zi-boxStyles-Text"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:ra:"
            type="text"
          />
        </div>
        <div
          class="css-1uvazka-boxStyles-FieldContainer"
        >
          <label
            class="css-1l5cwjh-boxStyles"
            for="field-:rb:"
          >
            <span
              class="css-1gsq1zi-boxStyles-Text"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:rb:"
            type="text"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
